--- a/site/.editorconfig
+++ b/site/.editorconfig
@@ -12,4 +12,5 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.{js,json,yaml}]
-indent-indent_size = 2
+indent_size = 2
+indent_style = space
