--- a/site/package.json
+++ b/site/package.json
@@ -26,6 +26,7 @@
     "gatsby-remark-copy-linked-files": "^5.7.0",
     "gatsby-remark-images": "^6.7.0",
     "gatsby-remark-prismjs": "^6.7.0",
+    "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-responsive-iframe": "^5.7.0",
     "gatsby-remark-smartypants": "^5.7.0",
     "gatsby-source-filesystem": "^4.7.0",
