--- a/site/package.json
+++ b/site/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
     "gatsby": "^4.7.2",
+    "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-plugin-feed": "^4.7.0",
     "gatsby-plugin-gatsby-cloud": "^4.7.0",
     "gatsby-plugin-google-analytics": "^4.7.0",
