--- a/site/package.json
+++ b/site/package.json
@@ -39,6 +39,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "simple-icons": "^6.12.0",
     "tailwindcss": "^3.0.23",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
