Add about page draft

--- a/site/package.json
+++ b/site/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "gatsby-paulomenin-blog",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "A blog powered by Gatsby and Markdown",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
+  "author": "Paulo Menin <paulomenin@gmail.com>",
   "dependencies": {
     "@babel/core": "^7.17.5",
     "@heroicons/react": "^1.0.5",
@@ -50,16 +47,11 @@
     "gh-pages": "^3.2.3",
     "prettier": "^2.5.1"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
     "gatsby"
   ],
   "license": "0BSD",
   "main": "n/a",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
-  },
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
