--- a/site/package.json
+++ b/site/package.json
@@ -10,7 +10,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
-    "gatsby": "^4.7.2",
+    "gatsby": "^4.9.1",
     "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-plugin-feed": "^4.7.0",
     "gatsby-plugin-gatsby-cloud": "^4.7.0",
@@ -19,6 +19,7 @@
     "gatsby-plugin-manifest": "^4.7.0",
     "gatsby-plugin-offline": "^5.7.0",
     "gatsby-plugin-postcss": "^5.7.0",
+    "gatsby-plugin-published": "^1.0.0",
     "gatsby-plugin-react-helmet": "^5.7.0",
     "gatsby-plugin-sharp": "^4.7.0",
     "gatsby-remark-copy-linked-files": "^5.7.0",
@@ -60,7 +61,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "deploy": "gatsby build && gh-pages -n -d public -b master"
+    "deploy": "gatsby clean && gatsby build && gh-pages -n -d public -b master"
   },
   "packageManager": "yarn@3.2.0"
 }
