--- a/site/package.json
+++ b/site/package.json
@@ -6,6 +6,10 @@
   "author": "Paulo Menin <paulomenin@gmail.com>",
   "dependencies": {
     "@babel/core": "^7.17.5",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "latest",
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
