--- a/site/package.json
+++ b/site/package.json
@@ -4,6 +4,21 @@
   "description": "A blog powered by Gatsby and Markdown",
   "version": "0.1.0",
   "author": "Paulo Menin <paulomenin@gmail.com>",
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "0BSD",
+  "main": "n/a",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "start": "gatsby develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "deploy": "gatsby clean && gatsby build && gh-pages -n -d public -b master"
+  },
   "dependencies": {
     "@babel/core": "^7.17.5",
     "@heroicons/react": "^1.0.5",
@@ -22,6 +37,7 @@
     "gatsby-plugin-published": "^1.0.0",
     "gatsby-plugin-react-helmet": "^5.7.0",
     "gatsby-plugin-sharp": "^4.7.0",
+    "gatsby-plugin-use-dark-mode": "^1.4.1",
     "gatsby-remark-copy-linked-files": "^5.7.0",
     "gatsby-remark-images": "^6.7.0",
     "gatsby-remark-prismjs": "^6.7.0",
@@ -35,33 +51,22 @@
     "prismjs": "^1.25.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "simple-icons": "^6.12.0",
     "tailwindcss": "^3.0.23",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
+    "use-dark-mode": "^2.3.1",
     "webpack": "^5.69.1",
     "webpack-loader": "^0.0.1"
   },
   "devDependencies": {
+    "eslint": "^8.13.0",
+    "eslint-plugin-react": "^7.29.4",
     "gh-pages": "^3.2.3",
     "prettier": "^2.5.1"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "0BSD",
-  "main": "n/a",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "gatsby develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "deploy": "gatsby clean && gatsby build && gh-pages -n -d public -b master"
   },
   "packageManager": "yarn@3.2.0"
 }
