--- a/site/package.json
+++ b/site/package.json
@@ -35,12 +35,14 @@
     "prismjs": "^1.25.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "simple-icons": "^6.12.0",
     "tailwindcss": "^3.0.23",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
+    "use-dark-mode": "^2.3.1",
     "webpack": "^5.69.1",
     "webpack-loader": "^0.0.1"
   },
