--- a/site/package.json
+++ b/site/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@babel/core": "^7.17.5",
     "@heroicons/react": "^1.0.5",
+    "@mdx-js/mdx": "v1",
+    "@mdx-js/react": "v1",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
@@ -32,9 +34,10 @@
     "gatsby-plugin-google-analytics": "^4.7.0",
     "gatsby-plugin-image": "^2.7.0",
     "gatsby-plugin-manifest": "^4.7.0",
+    "gatsby-plugin-mdx": "^3.12.1",
     "gatsby-plugin-offline": "^5.7.0",
     "gatsby-plugin-postcss": "^5.7.0",
-    "gatsby-plugin-published": "^1.0.0",
+    "gatsby-plugin-published": "^1.0.1",
     "gatsby-plugin-react-helmet": "^5.7.0",
     "gatsby-plugin-sharp": "^4.7.0",
     "gatsby-remark-copy-linked-files": "^5.7.0",
@@ -44,7 +47,6 @@
     "gatsby-remark-responsive-iframe": "^5.7.0",
     "gatsby-remark-smartypants": "^5.7.0",
     "gatsby-source-filesystem": "^4.7.0",
-    "gatsby-transformer-remark": "^5.7.0",
     "gatsby-transformer-sharp": "^4.7.0",
     "postcss": "^8.4.6",
     "prismjs": "^1.25.0",
@@ -53,8 +55,9 @@
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "reveal.js": "^4.3.1",
     "simple-icons": "^6.12.0",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "3.0.23",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "use-dark-mode": "^2.3.1",
