--- a/site/package.json
+++ b/site/package.json
@@ -40,6 +40,7 @@
     "gatsby-plugin-published": "^1.0.1",
     "gatsby-plugin-react-helmet": "^5.7.0",
     "gatsby-plugin-sharp": "^4.7.0",
+    "gatsby-plugin-static-folders": "^1.0.1",
     "gatsby-remark-copy-linked-files": "^5.7.0",
     "gatsby-remark-images": "^6.7.0",
     "gatsby-remark-prismjs": "^6.7.0",
@@ -55,9 +56,8 @@
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "reveal.js": "^4.3.1",
     "simple-icons": "^6.12.0",
-    "tailwindcss": "3.0.23",
+    "tailwindcss": "^3.0.24",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "use-dark-mode": "^2.3.1",
