--- a/site/package.json
+++ b/site/package.json
@@ -7,7 +7,7 @@
   "keywords": [
     "gatsby"
   ],
-  "license": "0BSD",
+  "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
@@ -35,17 +35,20 @@
     "eslint-plugin-react": "^7.29.4",
     "gatsby": "^4.9.1",
     "gatsby-awesome-pagination": "^0.3.8",
+    "gatsby-plugin-cname": "^1.0.0",
     "gatsby-plugin-feed": "^4.7.0",
     "gatsby-plugin-gatsby-cloud": "^4.7.0",
     "gatsby-plugin-google-analytics": "^4.7.0",
     "gatsby-plugin-image": "^2.7.0",
     "gatsby-plugin-manifest": "^4.7.0",
-    "gatsby-plugin-mdx": "^3.12.1",
+    "gatsby-plugin-mdx": "^3.15.2",
     "gatsby-plugin-offline": "^5.7.0",
     "gatsby-plugin-postcss": "^5.7.0",
     "gatsby-plugin-published": "^1.0.1",
     "gatsby-plugin-react-helmet": "^5.7.0",
+    "gatsby-plugin-robots-txt": "^1.7.1",
     "gatsby-plugin-sharp": "^4.7.0",
+    "gatsby-plugin-sitemap": "^5.15.0",
     "gatsby-plugin-static-folders": "^1.0.1",
     "gatsby-remark-copy-linked-files": "^5.7.0",
     "gatsby-remark-images": "^6.7.0",
