Fix github actions workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+
+      - name: Setup git user
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
