--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,30 +10,14 @@ jobs:
   build-and-deploy:
     name: Build and Deploy
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Setup git user
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
-
-      - name: Install Node.js
-        uses: actions/setup-node@v3
+      - name: Build and Publish
+        uses: enriikke/gatsby-gh-pages-action@v2
         with:
-          node-version: 16
-
-      - name: Install Dependencies
-        working-directory: ./site
-        run: yarn install
-
-      - name: Build
-        working-directory: ./site
-        env:
-          NODE_ENV: production
-        run: yarn build
-
-      - name: Deploy
-        working-directory: ./site
-        run: yarn deploy
+          access-token: ${{ secrets.GH_ACTIONS_ACCESS_TOKEN }}
+          deploy-branch: master
+          working-dir: ./site
