--- a/site/package.json
+++ b/site/package.json
@@ -24,6 +24,7 @@
     "@babel/eslint-parser": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "@heroicons/react": "^1.0.5",
+    "@matejmazur/react-katex": "^3.1.3",
     "@mdx-js/mdx": "v1",
     "@mdx-js/react": "v1",
     "@tailwindcss/forms": "^0.5.1",
@@ -50,7 +51,7 @@
     "gatsby-plugin-sharp": "^4.7.0",
     "gatsby-plugin-sitemap": "^5.15.0",
     "gatsby-plugin-static-folders": "^1.0.1",
-    "gatsby-remark-copy-linked-files": "^5.7.0",
+    "gatsby-remark-copy-linked-files": "^5.18.0",
     "gatsby-remark-images": "^6.7.0",
     "gatsby-remark-prismjs": "^6.7.0",
     "gatsby-remark-reading-time": "^1.1.0",
@@ -59,10 +60,13 @@
     "gatsby-source-filesystem": "^4.7.0",
     "gatsby-transformer-sharp": "^4.7.0",
     "gh-pages": "^3.2.3",
+    "katex": "^0.16.0",
+    "pako": "^2.0.4",
     "postcss": "^8.4.6",
     "prettier": "2.6.2",
     "prismjs": "^1.25.0",
     "prop-types": "^15.8.1",
+    "puppeteer": "^15.3.2",
     "react": "^17.0.1",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.1",
