--- a/site/package.json
+++ b/site/package.json
@@ -41,6 +41,7 @@
     "gatsby-plugin-gatsby-cloud": "^4.7.0",
     "gatsby-plugin-google-analytics": "^4.7.0",
     "gatsby-plugin-image": "^2.7.0",
+    "gatsby-plugin-kroki": "^1.0.0",
     "gatsby-plugin-manifest": "^4.7.0",
     "gatsby-plugin-mdx": "^3.15.2",
     "gatsby-plugin-offline": "^5.7.0",
