--- a/site/package.json
+++ b/site/package.json
@@ -17,7 +17,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "deploy": "yarn clean && yarn build && gh-pages -d public -b master"
+    "deploy": "yarn clean && yarn build && gh-pages -d public -b release"
   },
   "dependencies": {
     "@babel/core": "^7.17.5",
